styles.css
/* ... */
/* Add a dark background on topnav links and the dropdown button on hover */
.topnav a:hover, .dropdown:hover .dropbtn {
    background-color: #555;
    color: white;
}
/* Add a grey background to dropdown links on hover */
.dropdown-content a:hover {
    background-color: #ddd;
    color: black;
}
/* Show the dropdown menu when the user moves the mouse over the dropdown button */
.dropdown:hover .dropdown-content {
    display: block;
}
/* When the screen is less than 767 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 767px) {
    .topnav a:not(:first-child), .dropdown .dropbtn {display: none;}
    /* .topnav a, .dropdown .dropbtn {display: none;} */
    .topnav a.icon {
      float: right;
      display: block;
      background-color: #c73535;
    }
}
/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 767px) {
    .topnav.responsive {position: relative;}
    .topnav.responsive a.icon {
      position: absolute;
      right: 0;
      top: 0;
      background-color: #c73535;
    }
    .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
    .topnav.responsive .dropdown {float: none;}
    .topnav.responsive .dropdown-content {position: relative;}
    .topnav.responsive .dropdown .dropbtn {
            display: block;
            width: 100%;
            text-align: left;
        }
}
.topnav i {
    font-size: 16px;
}
.topnav .fas.fa-caret-down {
    color:#ffffff;
}

.nav {
    background-color: #c73535;
    padding: 10px;
}
@media only screen and (max-width:767px) {
    .nav {
        padding: 0px;
    }
}
.nav .menu {
    text-align: center;
}
.nav li {
    display: inline;
}
.nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.menu-item a {
    color: #ffffff;
}
.hero {
    background-color: transparent;
    background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
        url("https://sybiltec.com/images/blog07-free-img.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    padding: 100px 20px;
}
@media screen and (max-width: 767px) {
    .hero {
        background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
        url("https://sybiltec.com/images/blog07-free-img-800x450.jpg");
    }
}
.hero h1, .hero h4, .hero p {
    color: #ffffff;
}
.section {
    padding: 20px;
}
.clients {
    text-align: center;
}
.testimonials img {
    height: 80px;
    padding-top: 16px;
}
.certifications {
    text-align: center;
}
.contact {
    background-color: #c73535;
}
.contact h3, .contact p {
    color: #ffffff;
    text-align: center;
}
.footer {
    background-color: #000000;
    color: #ffffff;
}
.footer p, .footer a {
    color: #ffffff;
}
@media only screen and (min-width: 768px) {
    .footer h4 {
        text-align: left;
    }
}
.footer .logo {
    text-align: center;
}
.footer i {
    padding-right: 10px;
    color: #ffffff;
}
.footer img {
    padding: 5px 0px;
    max-height: 70px;
}
.copyright a {
    color: #c73535
}
.grey {
    background-color: #f6f6f6;
}
.shadow-box {
    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
    background-color: #ffffff;
    border-radius: 5px;
    padding: 20px;
}
.shadow-box-2 {
    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
    background-color: #ffffff;
    border-radius: 5px;
    margin: 20px;
}
i {
    color:#c73535;
    font-size: 50px;
}
.center {
    text-align: center;
}
.center img {
    max-width: 100%;
}
.left-align {
    margin-left:0;
}
.btn-contact {
    border: 1px solid #ffffff;
    background-color: #c73535;
    color: #ffffff;
    padding: 15px 40px;
    border-radius: 50px;
    text-decoration: none;
    margin-top: 30px;
    text-align: center;
}
.btn-contact a {
    color: #ffffff;
}
.btn-contact:hover {
    color: #c73535;
    border: 1px solid #ffffff;
    background-color: #ffffff;
}
.btn-cnt {    
    background-color: rgb(1,85,149);   
    color: #ffffff;
    padding: 15px 40px;
    border-radius: 50px;
    text-decoration: none;
    margin-top: 30px;
}
.btn-cnt:hover {
    background-color: rgb(39,161,218);
}
.btn-primary {
    background-color: #c73535;
    color: #ffffff;
    padding: 15px 40px;
    border-radius: 50px;
    text-decoration: none;
    margin-top: 30px;
    text-align: center;
}
.btn-primary:hover {
    background-color: #000000;
}
.btn-secondary {
    border: 1px solid #c73535;
    background-color: #ffffff;
    color:#c73535;
    padding: 15px 40px;
    border-radius: 50px;
    text-decoration: none;
    margin-top: 30px;
    text-align: center;
}
.btn-secondary:hover {
    color: #ffffff;
    background-color: #c73535;
}
@media only screen and (max-width: 479px) {
    .btn-cnt, .btn-primary, .btn-secondary, .btn-contact {    
        margin-top: 0px;
        width: 100%;
        display: block;
    }
}
.padding-bottom {
    padding-bottom: 30px;
}
.padding-top {
    padding-top: 30px;
}
.padding-btn {
    padding-top: 30px;
    padding-bottom: 30px;
}
@media only screen and (max-width: 479px) {
    .padding-btn {
        padding-top: 10px;
        padding-bottom: 20px;
    } 
}
::-moz-selection { /* Code for Firefox */
    color: #ffffff;
    background: #c73535;
}
::selection {
    color: #ffffff;
    background: #c73535;
}
.videoWrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    height: 0;
  }
.videoWrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
.Custom-Polaris-Icon {
    display: block;
    height: 4rem; /* or value equivalent to 20px */
    width: 4rem; /* or value equivalent to 20px */
    max-height: 100%;
    max-width: 100%;
    margin: auto;
}
/* ... */

